 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/01/04:
   * Move minimized windows to the back of the focused list (Mark)
     Window.cc FocusControl.cc/hh
*07/01/03:
   * Don't run [startup] items in apps file on fluxbox restart (Mark)
     Remember.cc fluxbox.cc
*07/01/02:
   * Replace `which' in fbsetbg and fbgm with `command -v' (Mark)
     util/fbsetbg fluxbox-generate_menu.in
   * Don't escape regular expression metacharacters in apps file, bug
     #1595497 (Mark)
     Remember.cc ClientPattern.cc
*07/01/01:
   * Happy New Year!
   * Don't draw style's menu icon pixmap underneath the program's icon (Mark)
     WinButton.cc
   * Don't run [startup] items in apps file if fluxbox fails to start (Mark)
     fluxbox.cc/hh
   * Don't run [startup] items in apps file on reconfigure (Mark)
     Remember.cc
   * Fix data type of data passed to set _NET_FRAME_EXTENTS (Simon)
     (sf.net #1621980)
     Similar fix for gnome current workspace... remember that XA_CARDINAL
     "32-bit" type is actually a "long array" argument (=64bit on 64 systems)
     Ewmh.cc Gnome.cc
*06/12/31:
   * Update window scroll action (and direction) on reconfigure (Mark)
     Window.cc
   * Update toolbar visibility on reconfigure (Mark)
     Toolbar.cc
*06/12/28:
   * Don't add 2 pixels to a specified toolbar height, bug #1528646 (Mark)
     Toolbar.cc
*06/12/28:
   * Allow focus to revert to stuck windows (Mark)
     FocusControl.cc
*06/12/27:
   * Don't assume "Jump" and "*Hidden" say "yes" in apps file (Mark)
   * Jump to autogrouped windows on another workspace if set to do so in
     apps file (Mark)
     Remember.cc
*06/12/20:
   * Fixed a few bugs with tabbed windows on restart (Mark)
     Window.cc FocusControl.hh
*06/12/19:
   * Little simplification of data structure for keybindings (Mark)
     Side effects:
     - "Mod4 a b" now behaves like "Mod4 a None b" -- in fact, "None" is now
       completely obsolete